--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,19 +1,19 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
-en:
+ja:
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
       send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
-      already_authenticated: "You are already signed in."
+      already_authenticated: "※すでにログイン済みです" #"You are already signed in."
       inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
+      invalid: "%{authentication_keys}もしくはPasswordがむこうです" #"invalid %{authentication_keys} or password."
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
+      not_found_in_database: "%{authentication_keys}もしくはPasswordがむこうです" #"invalid %{authentication_keys} or password."
+      timeout: "ログインの効力時間が切れました。もう一度ログイン下さい" #"Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
@@ -46,9 +46,9 @@ en:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "ログインに成功しました" #"Signed in successfully."
+      signed_out: "ログアウトしました" #"Signed out successfully."
+      already_signed_out: "すでにログアウト済みです" #"Signed out successfully."
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
@@ -61,5 +61,7 @@ en:
       not_found: "not found"
       not_locked: "was not locked"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "下記に１つエラーがあります。修正して再度送信して下さい。" #"1 error prohibited this %{resource} from being saved:"
+        other: "下記に%{count}つエラーがあります。修正して再度送信して下さい。" #"%{count} errors prohibited this %{resource} from being saved:"
+        taken: "は既に使用されています。"
+
