--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,9 +1,9 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
-ja:
+en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
+      confirmed: "メールアドレスの認証に成功しました" #"Your email address has been successfully confirmed."
       send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
@@ -15,7 +15,7 @@ ja:
       not_found_in_database: "%{authentication_keys}もしくはPasswordがむこうです" #"invalid %{authentication_keys} or password."
       timeout: "ログインの効力時間が切れました。もう一度ログイン下さい" #"Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      unconfirmed: "アドレスをご確認下さい" #"You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
@@ -41,7 +41,7 @@ ja:
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
+      signed_up_but_unconfirmed: "確認のリンクを指定のEmailアドレスへ送信しました。アカウントを有効化させるにはリンクからお進み下さい" #"A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
@@ -64,4 +64,4 @@ ja:
         one: "下記に１つエラーがあります。修正して再度送信して下さい。" #"1 error prohibited this %{resource} from being saved:"
         other: "下記に%{count}つエラーがあります。修正して再度送信して下さい。" #"%{count} errors prohibited this %{resource} from being saved:"
         taken: "は既に使用されています。"
-
+        
