--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -9,7 +9,7 @@ en:
     failure:
       already_authenticated: "※すでにログイン済みです" #"You are already signed in."
       inactive: "Your account is not activated yet."
-      invalid: "%{authentication_keys}もしくはPasswordがむこうです" #"invalid %{authentication_keys} or password."
+      invalid: "%{authentication_keys}もしくはPasswordが無効です" #"invalid %{authentication_keys} or password."
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "%{authentication_keys}もしくはPasswordがむこうです" #"invalid %{authentication_keys} or password."
